external-crates/move/crates/move-compiler/tests/move_2024/matching/invalid_guard_all_match_variants.snap
---
source: crates/move-compiler/tests/move_check_testsuite.rs
info:
  flavor: core
  edition: 2024.alpha
  lint: false
---
error[E04036]: non-exhaustive pattern
   ┌─ tests/move_2024/matching/invalid_guard_all_match_variants.move:14:12
   │
14 │     match (e) {
   │            ^ Pattern '_' not covered
   │
   = Match arms with guards are not considered for coverage.
